# Qt-SongPlayer

./: .gitignore  CMakeLists.txt  main.cpp
Libs/: CMakeLists.txt
Libs/Controller/: Action.cpp  Action.h  ActionAdd.h  ActionDelete.cpp  ActionDelete.h  SongController.cpp  SongController.h
Libs/Domain/: Action.h  ActionAdd.cpp  ActionAdd.h  ActionDelete.cpp  ActionDelete.h  Song.cpp  Song.h  SongException.cpp  SongException.h
Libs/Repository/: FileRepository.cpp  FileRepository.h  Playlist.cpp  Playlist.h  Repository.cpp  Repository.h
Libs/Ui/: MainWindow.cpp  MainWindow.h
Tests/: CMakeLists.txt  Test_FileRepository.cpp  Test_Repository.cpp  Test_SongController.cpp
